--- a/argo/mysql/mysql-deployment.yaml
+++ b/argo/mysql/mysql-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: example-app
 spec:
   selector:
     matchLabels:
@@ -37,6 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
+  namespace: example-app
   labels:
     app: mysql
 spec:
