--- a/argo/mysql/mysql-secret.yaml
+++ b/argo/mysql/mysql-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
+  namespace: example-app
 type: kubernetes.io/basic-auth
 stringData:
   password: test1234
