--- a/argo/mysql/mysql-storage.yaml
+++ b/argo/mysql/mysql-storage.yaml
@@ -2,6 +2,7 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
    name: mysql-pv-0
+   namespace: example-app
 spec: 
   storageClassName: local-storage
   capacity:
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
    name: mysql-pvc-0
+   namespace: example-app
 spec:
    storageClassName: local-storage
    accessModes:
