--- a/argo/database/mysql-service.yaml
+++ b/argo/database/mysql-service.yaml
@@ -9,7 +9,7 @@ spec:
   - port: 3306
     protocol: TCP
     targetPort: 3306
-    nodeport: 30050
+    nodePort: 30050
   selector:
     app: database
   type: NodePort
