--- a/argo/database/mysql-deployment.yaml
+++ b/argo/database/mysql-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       - image: mysql:5.7
         name: database
         env:
-        - name: MYSQL_PASSWORD
+        - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: database-secret
