--- a/argo/nginx/nginx-deployment (1).yaml
+++ b/argo/nginx/nginx-deployment (1).yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: keerthiikrish/myapp
         ports:
         - containerPort: 80
 ---
