--- a/argo/argocd/argocd-app/app2.yaml
+++ b/argo/argocd/argocd-app/app2.yaml
@@ -2,12 +2,12 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: my-app-1
-  namespace: argocd
+  namespace: example-app
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: example-app
     server: https://kubernetes.default.svc
   project: default
   source:
