--- a/argo/argocd/argocd-app/app1.yaml
+++ b/argo/argocd/argocd-app/app1.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: my-app-1
-  namespace: example-app
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
