--- a/argo/argocd/argocd-app/app2.yaml
+++ b/argo/argocd/argocd-app/app2.yaml
@@ -1,21 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: example-app
+  name: my-app-1
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
+  destination:
+    namespace: example-app
+    server: https://kubernetes.default.svc
   project: default
   source:
+    path: argo/argocd/my-app/app2
     repoURL: https://github.com/krishnaveniganesan/argocd.git
     targetRevision: HEAD
-    path: argo/argocd/my-app/app2
-    directory:
-      recurse: true
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: example-app
-  syncPolicy:
-    automated:
-      prune: false
-      selfHeal: false
 
