--- a/argo/argocd/my-app/app2/app.yaml
+++ b/argo/argocd/my-app/app2/app.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:1
         ports:
         - containerPort: 80
 ---
